# teko-lang

./: .gitignore  ADDITIONAL_SPEC.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  INITIAL_SPEC.md  Makefile  PITCH-pt-br.md  README.md  REBOOT_PLAN.md  TECH_DEBT_BACKLOG.md  TECH_SPEC.md  TEKO_CHECKER.md  TEKO_COMPILER_MEMORANDUM.txt  TEKO_CONSTITUTION.md  TEKO_CORRECTION_PLAN.md  TEKO_EVOLUTION_DESIGN.md  TEKO_EVOLUTION_JUSTIFICATION.md  TEKO_HISTORY.md  TEKO_LEGISLATION.md  TEKO_MASTER_PLAN.md  TEKO_ROADMAP_BINARY.md  TEKO_ROADMAP_E7_V2.md  TEKO_ROADMAP_INDEPENDENCE.md  TEKO_ROADMAP_NATIVE_BACKEND.md  TEKO_ROADMAP_TOOLING.md  add_spec.txt  assertion.txt  cycle.txt  language_spec.md  main.c  main.tks  refs.txt  teko-generics-spec.md  teko-lifecycle-spec.md  teko-primitives-spec.md  teko-structures-spec.md  teko.c  teko.tkp
.claude/agents/: teko-developer.md  teko-engineer.md  teko-tech-lead.md
.claude/output-styles/: teko.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  mirror-pr-to-org.yml  native.yml  open-pr.yml  sanitizers.yml  sast.yml  seed-linux-fork.yml  tests.yml  theory-ar-validation.yml  wasm-threads.yml  wasm.yml
.ollamassist/conversations/: 9076842d-3456-4163-9064-0edbd818cf74.json
bin2/: teko  teko.tsym
bootstrap/c/: Makefile
docs/: ARCHITECTURE.md  BACKEND_AOT_PLAN.md  HANDOFF_NATIVE_RUNNER_AND_CRYPTO_SURFACE.md  HANDOFF_PHASE14.md  HANDOFF_PHASE15B.md  HANDOFF_PHASE15CD.md  HANDOFF_PHASE17F_DECIMAL.md  ORCHESTRATION_DOCTRINE.md  PHASE10_WASM_CONCURRENCY.md  PHASE12_FRONTEND_GRAMMAR.md  PHASE13_NATIVE_CRYPTO.md  PHASE14_ADVANCED_CONCURRENCY.md  PHASE15_OOP.md  PHASE16_CASTING.md  PHASE17_FLOATING_POINT.md  PHASE18E_ARRAYS_COLLECTIONS_SIMD.md  PHASE18_OPTIONALS_COMPTIME.md  PHASE19_NETWORKING.md  PHASE19_TLS_TRACK.md  PHASE_BROWSER_FFI.md  plan.md  vm_plan.md
docs/design/: al-wave-crumbs.md  al-wave-emit-throughput.md  build-observability-plan.md  cast-width-hygiene-0.3.1.md  kill-c-pull-forward-0.3.0.30.md  null-union-c3-c7-0.3.0.30.md  null-union-corpus-pivot-0.3.0.30.md  ref-transparent-model.md  regressives-full-stack-0.3.0.30.md  regressor-principal-0.3.1.md  star-ref-and-ffi-0.3.1.md  teko-target-crosslink-0.3.1.md  tkb-regression-format.md  tkr-regression-format.md
examples/core0/: Point.struct.teko  Service.class.teko  TokenKind.enum.teko  main.teko
examples/project/: main.tks  test.tkp
extensions/vscode/: language-configuration.json  package-lock.json  package.json
runtime/: teko_rt.c  teko_rt.h
runtime/native/: .gitignore  run-native.sh  teko_rt.c  teko_rt.h  teko_rt_sched.c
runtime/wasm/: CLAUDE.md  README.md  run-alloc.mjs  run-api.mjs  run-broadcast.mjs  run-browser.mjs  run-capstone.mjs  run-cast.mjs  run-codec.mjs  run-crypto.mjs  run-decimal-surface.mjs  run-decimal.mjs  run-delayed.mjs  run-dom-source.mjs  run-dom.mjs  run-duplex.mjs  run-facade.mjs  run-ffi.mjs  run-float.mjs  run-floatstr.mjs  run-hash.mjs  run-nested.mjs  run-node.mjs  run-producer-consumer.mjs  run-random.mjs  run-resilience.mjs  run-richevent.mjs  run-shared.mjs  run-threads-browser.mjs  run-time.mjs  run-waiters.mjs  run-ws.mjs
sample_codes/: SampleAbstractClass.class.teko  SampleClass.class.teko  SampleExtensions.ext.teko  SampleInterface.iface.teko  SampleMeta.meta.teko  SampleTrait.trait.teko  main.teko
scripts/: ar_link_run_consumer.c  build_with_seed_fallback.sh  check_ar_coff.sh  check_ar_elf.sh  check_ar_macho.sh  cli_flags_test.sh  diff_vm_native.sh  target_host_default_test.sh  theory_ar_consumer.c
sdk/: flows.tks  fs.tks  lists.tks  logger.tks  marshall.tks  strings.tks  sync.tks  teko.tkp
src/: CLAUDE.md  codegen_aot.c  codegen_aot.h  codegen_li.c  codegen_li.h  codegen_li_wasm.c  core.h  core.tks  driver.c  driver.h  driver.tks  frontend_interop.c  frontend_interop.h  lexer.c  lexer.h  lexer_string.c  lexer_string.h  main.c  parser.c  parser.h  parser_async_control.c  parser_async_control.h  parser_concurrent.c  parser_concurrent.h  parser_di.c  parser_di.h  parser_extensions.c  parser_extensions.h  parser_ffi.c  parser_ffi.h  parser_generics.c  parser_generics.h  parser_messaging.c  parser_messaging.h  parser_statements.c  parser_statements.h  parser_string.c  parser_string.h  parser_types.c  parser_types.h  (+34 more)
src/assert/: assert.c  assert.h  assert.tks  assert_test.tkt
src/backend/: abi_win64_test.tkt  encode_arm64.tks  encode_arm64_test.tkt  encode_riscv.tks  encode_riscv_test.tkt  encode_x86_64.tks  encode_x86_64_test.tkt  isel_arm64.tks  isel_arm64_test.tkt  isel_riscv.tks  isel_riscv_test.tkt  isel_x86_64.tks  isel_x86_64_test.tkt  minst.tks  minst_interp.tks  minst_interp_test.tkt  objfile_ar.tks  objfile_ar_coff.tks  objfile_ar_coff_test.tkt  objfile_ar_macho.tks  objfile_ar_macho_test.tkt  objfile_ar_test.tkt  objfile_coff_test.tkt  objfile_elf.tks  objfile_elf_riscv.tks  objfile_elf_riscv_test.tkt  objfile_elf_test.tkt  objfile_macho_test.tkt  regalloc_match_test.tkt  regalloc_riscv_test.tkt  regalloc_test.tkt  regalloc_x86_test.tkt  stackify.tks  stackify_test.tkt
src/casting/: casting.tks  casting_test.tkt
src/checker/: borrow.tks  borrow_test.tkt  check.h  check.tks  check_modules.c  check_modules.tks  checker_test.tkt  closures_test.tkt  collect.c  collect.h  collect.tks  comptime_fold.tks  comptime_fold_test.tkt  consteval.tks  consteval_form.tks  consteval_order.tks  consteval_test.tkt  di.tks  escape.c  escape.tks  expr.c  expr.h  expr.tks  generics_test.tkt  initanalysis.tks  match.c  match.h  match.tks  monomorph.c  monomorph.tks  resolve.c  resolve.h  resolve.tks  revalidate.c  revalidate.h  (+17 more)
tests/: test_async.c  test_codegen_aot.c  test_codegen_li.c  test_concurrent.c  test_di_semantics.c  test_extensions.c  test_ffi.c  test_generics.c  test_lexer_phase12.c  test_main.c  test_messaging.c  test_project.c  test_semantics.c  test_statement.c  test_strings.c  test_target.c  test_teko_il.c  test_tooling.c  test_type_checker.c  test_types.c  test_visibility.c  test_vm_arena.c  test_vm_concurrency.c  test_vm_core.c  test_vm_debug.c  test_vm_scheduler.c
tools/: gen_decimal_kats.py
(+492 files in other folders)
